# Hack-4-SAGES

./: .gitignore  README.md  SCRUM.md
backend/: CMakeLists.txt  build_file.cpp
backend/include/: ClimateEngine.h  Planet.h  Star.h
backend/include/planet_errors/: all_planet_errors.h  empty_planet_argument.h  invalid_planet_set_argument.h  planet_parameter_type.h
backend/include/star_errors/: all_stars_errors.h  empty_star_argument.h  invalid_star_set_argument.h  star_parameter_type.h
backend/src/: Planet.cpp  Star.cpp
backend/src/planet_errors/: empty_argument.cpp  invalid_argument_error.cpp
backend/src/star_errors/: empty_argument.cpp  invalid_argument_error.cpp
facade/: facade.py
frontend/: params_enum.py
frontend/dashboard/: dashboard.py  planet_visual.py  requirements.txt
frontend/dashboard/.streamlit/: config.toml
frontend/graphs/: graphs.py
